# r2yara

./: .gitignore  Cargo.toml  Makefile.acr  README.md  autogen.sh  config.mk.acr  configure  configure.acr  meson.build
.github/workflows/: ci.yml
core-r2yara/: Cargo.toml  build.rs
core-r2yara/src/: lib.rs
doc/: r2yara.7
src/: Makefile  core_r2yara.c  core_yara.c
test/: Makefile
test/db/extras/: yara
yara-r2-module/: ChangeLog.orig  README.md
yara-r2-module/doc/: index.md
yara-r2-module/src/: r2.c
