[workspace]
members = [
   "core-r2yara",
   "yoroxoldo/lib",
   "yoroxoldo/capi",
   "yoroxoldo/cli",
   "yoroxoldo/fmt",
   "yoroxoldo/macros",
   "yoroxoldo/parser",
   "yoroxoldo/proto",
   "yoroxoldo/proto-json",
   "yoroxoldo/proto-yaml",
   "yoroxoldo/py",
]
resolver = "2"

[workspace.package]
version = "1.5.0"
authors = ["Victor M. Alvarez <vmalvarez@virustotal.com>"]
edition = "2021"
homepage = "https://virustotal.github.io/yara-x"
repository = "https://github.com/VirusTotal/yara-x"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["pattern-matching", "cybersecurity", "forensics", "malware", "yara"]
rust-version = "1.85.0"

[workspace.dependencies]
aho-corasick = "1.1.3"
annotate-snippets = "0.11.5"
anyhow = "1.0.98"
array-bytes = "9.3.0"
ascii_tree = "0.1.1"
base64 = "0.22.1"
bincode = "2.0.1"
bitflags = "2.9.1"
bitvec = "1.0.1"
bstr = "1.12.0"
cbindgen = "0.29.0"
chrono = "0.4.41"
clap = "4.5.41"
clap_complete = "4.5.55"
const-oid = "0.9.6"
crc32fast = "1.5.0"
der-parser = "10.0.0"
digest = "0.10.7"
dsa = "0.6.3"
ecdsa = "0.16.9"
enable-ansi-support = "0.2.1"
env_logger = "0.11.8"
figment = "0.10.19"
globwalk = "0.9.1"
goldenfile = "1.8.0"
home = "0.5.11"
ihex = "3.0.0"
indexmap = "2.10.0"
intaglio = "1.10.0"
ipnet = "2.11.0"
itertools = "0.14.0"
linkme = "0.3.33"
log = "0.4.27"
magic = "0.16.2"
md2 = "0.10.2"
md-5 = "0.10.6"
memmap2 = "0.9.7"
memchr = "2.7.5"
memx = "0.1.32"
nom = "8.0.0"
num-traits = "0.2.19"
num-derive = "0.4.2"
p256 = "0.13.2"
p384 = "0.13.0"
predicates = "3.1.3"
pretty_assertions = "1.4.1"
protobuf = "3.7.2"
protobuf-codegen = "3.7.2"
protobuf-parse = "3.7.2"
psl = "2.1.126"
quanta = "0.12.6"
rayon = "1.10.0"
regex = "1.11.1"
regex-syntax = "0.8.5"
regex-automata = "0.4.9"
roxmltree = "0.20.0"
rsa = "0.9.8"
rustc-hash = "2.1.1"
serde = "1.0.219"
serde_json = "1.0.141"
sha1 = "0.10.6"
sha2 = "0.10.8"
smallvec = "1.14.0"
strum = "0.27.2"
strum_macros = "0.27.2"
thiserror = "2.0.12"
tlsh-fixed = "0.1.1"
uuid = "1.17.0"
walrus = "0.23.3"
wasmtime = { version = "34.0.2", default-features = false }
x509-parser = "0.17.0"
yansi = "1.0.1"
## Use crates.io published versions instead of a local checkout
# If needed by members, uncomment and pin to the desired version.
yara-x = { path = "yoroxoldo/lib", version = "1.5.0" }
yara-x-fmt = { path = "yoroxoldo/fmt", version = "1.5.0" }
yara-x-macros = { path = "yoroxoldo/macros", version = "1.5.0" }
yara-x-parser = { path = "yoroxoldo/parser", version = "1.5.0" }
yara-x-proto = { path = "yoroxoldo/proto", version = "1.5.0" }
yara-x-proto-yaml = { path = "yoroxoldo/proto-yaml", version = "1.5.0" }
yara-x-proto-json = { path = "yoroxoldo/proto-json", version = "1.5.0" }
zip = "4.3.0"
